# ContextLens

./: .env.example  .gitignore  CONTRIBUTING.md  CURRENT_STATE.md  DECISIONS.md  DEMO_SCRIPT.md  PROJECT.md  PROJECT_METRICS.md  README.md  ROADMAP.md  TASK.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: Untitled  __init__.py  config.py  database.py  main.py
backend/scripts/: __init__.py  check_redis_for_rq.py  export_evidence_benchmark_summary.py  export_rag_systems_benchmark_summary.py  generate_contextlens_metrics.py  rq_worker.sh  run_batch_benchmark.py  run_benchmark.py  run_evidence_benchmark.py  run_evidence_stress_experiment.py  run_rag_systems_benchmark.py  seed_benchmark.py  seed_evidence_benchmark.py  seed_evidence_stress_benchmark.py  seed_rag_systems_benchmark.py
backend/tests/: conftest.py  test_batch_runner.py  test_benchmark_realism.py  test_benchmark_statistics.py  test_benchmark_trace.py  test_config_comparison_scores.py  test_cost_estimation.py  test_dashboard_analytics_api.py  test_dashboard_summary_api.py  test_database_url_normalization.py  test_datasets_api.py  test_documents.py  test_evaluation_persistence.py  test_evidence_dataset_load.py  test_evidence_stress_dataset_load.py  test_failure_taxonomy.py  test_full_rag_mocked.py  test_full_run_failure_and_lock.py  test_generate_contextlens_metrics.py  test_llm_judge_evaluation_retry.py  test_llm_judge_parse.py  test_llm_judge_parse_golden.py  test_llm_provider_keys.py  test_query_cases_api.py  (+11 more)
(+239 files in other folders)
